         CTRL Right Arrow , and collapsed with CTRL Left arrow.
         Also added context menu items to perform the same function. Changed
         refresh session functionality to display tree expanded to one level
         by default.
1744518: Hit Enter to launch a session.  Implemented on tree and list view
1746714: More Session Hotkeys.  You can now have up to 10 configurable 
         session hotkeys.  Hotkeys may be indvidually enabled and disabled.         
         
Bugs:
Not Tracked:  Create HKCU\Software\Microsoft\Windows\CurrentVersion\Run
              if it doesn't exist and auto startup requested
Not Tracked:  Upgrade settings from one version of PSM to another ( so
              you don't have to keep resetting everything after an upgrade).
Not Tracked:  Finally fixed PSM so that if you select minimize on startup
			  the tree no longer displays then hides, instead it just starts
			  in the system tray

PuTTY Session Manager v0.2.3.1 ( 19-06-2007 )
=============================================
Fifth release of PuTTY Session Manager

This is a minor release of PSM with the following changes:

Feature requests:
1651011: Allow sort order of sessions and folders to be configured by 
         the user
1651897: Create csv session export.  You can now export 
         Session Name,Folder Name,Username,Hostname
         to csv file ( useful for scripting if you want to create a list
         of boxes you have logons to ).  

Bugs:
Not Tracked:  New sessions ( with a space in their name )
              weren't showing up in the system tray with a 
              session refresh
Not Tracked:  ArrayIndexOutOfBoundsException when trying to create 
              a new session when no previoussessions exist
Not Tracked:  Fix NRE on startup if you don't have access to 
			  HKCU\Software\Microsoft\Windows\CurrentVersion\Run

PuTTY Session Manager v0.2.2.1 ( 29-10-2006 )
=============================================
Fourth release of PuTTY Session Manager
